--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^0.4.0+6
   firebase_auth: ^0.11.1+7
   cloud_firestore: ^0.12.5+2
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
